--- a/high-level/index.html
+++ b/high-level/index.html
@@ -11,8 +11,8 @@
   </style>
 </head>
 <body>
-  <div>
-
+  <div id="app">
+    <button id="btn"></button>
   </div>
   <script src="./02.Vue3.0源码.js"></script>
   <script>
@@ -24,18 +24,19 @@
       age: 1
     })
 
+    // computed也是用effect实现的
     let double = computed(() => obj.age * 2)
 
     effect(() => {
-      // 数据变化会出发函数
+      // 数据变化会触发函数
       console.log('数据改变', obj.age);
       root.innerHTML = `<h1>${obj.name}今年${obj.age}岁了，两倍的年龄是${double.value}}</h1>`
     })
 
     btn.addEventListener('click', () => {
-      // 出发set函数，执行effect
+      // 触发set函数，执行effect
       obj.age += 1;
-    })
+    }, false)
   </script>
 </body>
 </html>
